overflow fix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1029,7 +1029,6 @@ h1 {
 
 .heart {
   height: 1040px;
-  overflow: hidden;
 }
 
 .heart-wrap {
